--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1> WElcome to Watch</h1>
    
 <div class="clock  ">
+
 
     <div class="brand"> SONY</div>
     <div class="slogan">make.belive</div>
